# playa2

./: CMakeLists.txt  LICENSE  README.md  do.sh
Projects/Playa2/: CMakeLists.txt  README.md
Projects/Playa2/Source/: main.cpp  main.h
Projects/Playa2/Source/Audio/: AudioCallback.cpp  AudioCallback.h  AudioEngine.cpp  AudioEngine.h  AudioPlayer.cpp  AudioPlayer.h
Projects/Playa2/Source/Interfaces/Audio/: IAudioEngine.h
Projects/Playa2/Source/Interfaces/Models/: IAppModel.h
Projects/Playa2/Source/Interfaces/Presenters/: IMainScreenPresenter.h
Projects/Playa2/Source/Interfaces/Views/: IMainScreenView.h
Projects/Playa2/Source/Models/: AppModel.cpp  AppModel.h  AppModelFreeFunctions.cpp  AppModelFreeFunctions.h
Projects/Playa2/Source/Presenters/: MainScreenPresenter.cpp  MainScreenPresenter.h
Projects/Playa2/Source/Schemas/: AppSchema.cpp  AppSchema.h
Projects/Playa2/Source/Views/: MainScreenView.cpp  MainScreenView.h
Projects/Playa2Tests/: CMakeLists.txt
Projects/Playa2Tests/Source/: Main.cpp  TestUtils.h  UnitTest.cpp  UnitTest.h
Projects/Playa2Tests/Source/Models/: AppModelFreeFunctionsTest.cpp  AppModelFreeFunctionsTest.h  AppModelTest.cpp  AppModelTest.h
src/: main.cpp
